Fix footer align

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h2 {
     color: #F9FAF8;
     font-size: 1em;
     letter-spacing: 0.1ch;
-    gap: 3%;
+    gap: 0.5%;
 }
 
 .overlay {
@@ -205,6 +205,7 @@ p#final-score {
 #github {
     width: 22px;
     height: "auto";
+    margin-top: 30%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -267,6 +268,11 @@ p#final-score {
 
     .footer {
         font-size: 0.9em;
+        gap: 2%;
+    }
+
+    #github {
+        margin-top: 15%;
     }
 
     .popup {
